[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndph"
version = "0.1.0"
description = "NeRF dataset preprocessing helper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ndph*"]